2010-01-18  Jean-Louis Martineau <martineau@zmanda.com>
	* ndmp-src/ndma_cops_backreco.c: Output "DATA SIZE" lines.
	* server-src/dumper.c: Set dumpsize from origsize for DIRECTTCP
			       data path.

2010-01-19  Paul C. Mantz <pcmantz@zmanda.com>
	* installcheck/amreport.pl: made output checks ignore spacing

2010-01-18  Dustin J. Mitchell <dustin@zmanda.com>
	* ndmp-src/ndmpconnobj.c: even better logging for connection setup and
	  close

2010-01-18  Dustin J. Mitchell <dustin@zmanda.com>
	* ndmp-src/ndmp2_xmt.c ndmp-src/ndmp3_xmt.c ndmp-src/ndmp4_xmt.c
	  ndmp-src/ndmp9_xmt.c: fix sign-bit extension error in *_xdr_u_quad

2010-01-18  Dustin J. Mitchell <dustin@zmanda.com>
	* ndmp-src/Makefile.am: fix (apparently innocuous) Makefile typo

2010-01-18  Dustin J. Mitchell <dustin@zmanda.com>
	* perl/Amanda/Taper/Scribe.pm: add an xfer argument to start_dump, so
	  that the scribe can cancel a transfer in an error situation
	* installcheck/Amanda_Taper_Scribe.pl: git it an xfer
	* server-src/taper.pl: git it an xfer

2010-01-18  Dustin J. Mitchell <dustin@zmanda.com>
	* ndmp-src/ndma_tape_simulator.c: maintain a 'lock file' per device,
	  and return NDMP_DEVICE_BUSY_ERR on a collision
	* device-src/ndmp-device.c: close the tape agent before switching
	  connections, and before closing a device, to avoid
	  NDMP_DEVICE_BUSY_ERR; do not set the record size when opening the
	  tape agent, as the mover may already be active

2010-01-18  Dustin J. Mitchell <dustin@zmanda.com>
	* restore-src/restore.c: add another htonl invocation for ipv4 address

2010-01-17  Dustin J. Mitchell <dustin@zmanda.com>
	* perl/Amanda/Xfer.pod: fix POD typo

2010-01-17  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer/robot.pm: Set drive state to unknown.

2010-01-17  Dustin J. Mitchell <dustin@zmanda.com>
	* perl/Amanda/Changer/compat.pm: allow multiline responses
	* installcheck/Amanda_Changer_compat.pl: test

2010-01-17  Dustin J. Mitchell <dustin@zmanda.com>